# nexus-oss

./: .gitignore  DEBUGGING.md  LICENSE  README.md  bootstrap.sh  build-installer.sh
.github/workflows/: release.yml
deploy/: network-policy-dev.yaml  network-policy-prod.yaml  setup.sh  setup.txt  uninstaller.sh
docs/: api.md  architecture.md  quickstart.md
nexus-cli/: go.mod  go.sum  main.go
nexus-cli/client/: client.go
nexus-cli/cmd/: challenge.go  compose.go  root.go  session.go  version.go
nexus-cli/config/: config.go
nexus-cli/tui/: tui.go
nexus-engine/: Makefile  buf.gen.yaml  buf.yaml  go.mod  go.sum
nexus-engine/cmd/: main.go  version.go
nexus-engine/contracts/nexus/nodeagent/v1/: nodeagent.proto
nexus-engine/internal/api/: admin.go  challenges.go  cluster.go  handlers_test.go  registry.go  routes.go  sessions.go  testhelpers_test.go
nexus-engine/internal/config/: config.go
nexus-engine/internal/controller/: controller.go
nexus-engine/internal/k8s/: client.go
nexus-engine/internal/nodeagent/: client.go
nexus-engine/internal/registry/: builder.go  compose.go
nexus-engine/internal/state/: redis.go  redis_test.go
nexus-installer/: checksums.txt  go.mod  main.go  model.go  pages.go  styles.go
nexus-installer/internal/: exec.go  installer.go  utils.go
nexus-node-agent/: Cargo.toml  build.rs
nexus-node-agent/src/: config.rs  main.rs  server.rs
nexus-node-agent/src/adapters/: ipset.rs  iptables.rs  mod.rs  wireguard.rs
