[package]
name = "nexus-node-agent"
version = "0.1.0"
edition = "2021"
description = "Nexus OSS privileged execution daemon — ipset, iptables, WireGuard"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
tonic = { version = "0.12", features = ["transport", "tls", "tls-roots"] }
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
lto = true
codegen-units = 1
strip = true
